# wopay

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  check_compile.bat  docker-compose.yml  nginx.conf  test_compile.rs
contract/: Wopay.sol
docs/: api_documentation.md  blockchain_integration.md  feasibility_analysis.md  mvp_design.md  project_plan.md  system_architecture.md  usage_examples.md
front/: package-lock.json  package.json
front/src/: App.vue
front/src/components/: MetaMaskPayment.vue
migrations/: 001_initial.sql  002_wallet_management.sql
scripts/: test_api.sh
src/: config.rs  handlers.rs  main.rs  models.rs  routes.rs  state.rs
src/handlers/: health_handlers.rs  merchant_handlers.rs  mod.rs  payment_handlers.rs  wallet_handlers.rs  webhook_handlers.rs
src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs
src/models/: merchant.rs  payment.rs  transaction.rs  webhook.rs
src/services/: collection_service.rs  ethereum_service.rs  merchant_service.rs  mod.rs  payment_service.rs  wallet_manager.rs  webhook_service.rs
src/utils/: auth.rs  crypto.rs  mod.rs  qr.rs  validation.rs
