[package]
name = "wopay"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "decimal", "migrate"] }

# 区块链
ethers = "2.0"

# 工具库
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# 日志
log = "0.4"
env_logger = "0.11"

# 配置
dotenv = "0.15"

# 安全
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# 工具
qrcode = "0.14"
image = "0.24"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }